apps/shared/base/validating-admission-policies/deploy-required-fields.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deploy-required-fields
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
  validations:
    # Enforce Resource Requests and Limits for Deployments
    - expression: "object.spec.template.spec.containers.all(container, has(container.resources) && has(container.resources.limits))"
      message: "Deployments must specify both resource requests and limits."

    # Enforce Mandatory Readiness and Liveness Probes for Deployments
    - expression: "object.spec.template.spec.containers.all(container, container.readinessProbe != null && container.livenessProbe != null)"
      message: "Deployments must have readiness and liveness probes defined."
