apps/shared/base/validating-admission-policies/required-env-label.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: required-env-label
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["services"]

      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
  validations:
    # 'app.kubernetes.io/name' in object.metadata.labels &&
    - expression: |
        has(object.metadata.labels) &&
        'env' in object.metadata.labels &&
        (object.metadata.labels['env'].startsWith('dev') || 
        object.metadata.labels['env'].startsWith('stage') || 
        object.metadata.labels['env'].startsWith('prod'))
      message: "The 'env' label must be set. 'env' label must stats with one of the following values: 'dev', 'stage', or 'prod'."
      # message: "The 'env' and 'app.kubernetes.io/name' labels must be set. 'env' label must have one of the following values: 'dev', 'stage', or 'prod'."
